fix(skip-links): fix display on Firefox

--- a/framework/components/ecl-skip-links/ecl-skip-links.scss
+++ b/framework/components/ecl-skip-links/ecl-skip-links.scss
@@ -1,10 +1,11 @@
 /**
- * Site switcher component
+ * Skip link component
  * @define skip-link
  */
 
 .ecl-skip-link__wrapper {
   left: map-get($ecl-spacing, 'l');
+  margin: 0;
   position: fixed;
   top: map-get($ecl-spacing, 'l');
   z-index: map-get($ecl-z-index, 'max');
@@ -19,4 +20,9 @@
   outline: 4px solid map-get($ecl-colors, 'yellow-100');
   outline-offset: 0;
   padding: map-get($ecl-spacing, 'xxs');
+
+  &:focus,
+  &:active {
+    white-space: nowrap;
+  }
 }
